# storage/api-docs/api-docs.json
@@ -321,12 +321,18 @@
                                         "travel_preferences": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
-                                            },
-                                            "example": [
-                                                "mountains",
-                                                "beaches"
-                                            ]
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "Deserts"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
                                         },
                                         "trips_count": {
                                             "type": "integer",
@@ -405,7 +411,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "properties": {
                                     "email": {
@@ -443,9 +449,8 @@
                                             "type": "string"
                                         },
                                         "example": [
-                                            "mountains",
-                                            "beaches",
-                                            "forests"
+                                            "2",
+                                            "3"
                                         ]
                                     }
                                 },
@@ -469,10 +474,6 @@
                                             "type": "string",
                                             "example": "John Doe"
                                         },
-                                        "avatar": {
-                                            "type": "string",
-                                            "example": "https://example.com/avatar.jpg"
-                                        },
                                         "facebook_link": {
                                             "type": "string",
                                             "example": "https://facebook.com/johndoe"
@@ -492,12 +493,18 @@
                                         "travel_preferences": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
-                                            },
-                                            "example": [
-                                                "mountains",
-                                                "beaches"
-                                            ]
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "Deserts"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
                                         },
                                         "trips_count": {
                                             "type": "integer",
